feat: custom-headers
#VSDSPUB-1054

- headers renamed
toList simplified